--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <img src="img/slider.png" alt="">
     </div>
     <section>
-        <div class="viagens">
+        <div id="depoimentos" class="viagens">
             <a href="produto.html">
                 <div class="item">
                     <img src="https://placehold.co/300x300" alt="">
@@ -71,6 +71,72 @@
                 </div>
             </a>
         </div>
+        </section>
+        <div class="sobre">
+            <div class="texto">
+                <h2>Nossa Empresa</h2>
+
+                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae saepe culpa dignissimos, nihil
+                    quae alias at sed aut eaque magni obcaecati consectetur? Rerum amet quisquam reprehenderit tempore
+                    deserunt tempora. Eaque?
+                </p>
+                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae saepe culpa dignissimos, nihil
+                    quae alias at sed aut eaque magni obcaecati consectetur? Rerum amet quisquam reprehenderit tempore
+                    deserunt tempora. Eaque?
+                </p>
+                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae saepe culpa dignissimos, nihil
+                    quae alias at sed aut eaque magni obcaecati consectetur? Rerum amet quisquam reprehenderit tempore
+                    deserunt tempora. Eaque?
+                </p>
+
+            </div>
+        </div>
+        <section>
+
+        <div class="depoimentos">
+            <h3>depoimentos</h3>
+            <h2> O que os clientes dizem</h2>
+            <p class="depoimentos-descricao">
+                Confira tudo que nossos clientes falam sobre que tiveram conosco.
+            </p>
+
+            <div class="item">
+                <img src="img/plabomarcal.png">
+                <div class="descricao">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae saepe culpa dignissimos, nihil
+                    quae alias at sed aut eaque magni obcaecati consectetur? Rerum amet quisquam reprehenderit tempore
+                    deserunt tempora. Eaque?
+                </div>
+                <div class="nome">
+                    Plabo Marçal
+                </div>
+            </div>
+
+            <div class="item">
+                <img src="img/plabomarcal.png">
+                <div class="descricao">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae saepe culpa dignissimos, nihil
+                    quae alias at sed aut eaque magni obcaecati consectetur? Rerum amet quisquam reprehenderit tempore
+                    deserunt tempora. Eaque?
+                </div>
+                <div class="nome">
+                    Plabo Marçal
+                </div>
+            </div>
+
+            <div class="item">
+                <img src="img/plabomarcal.png">
+                <div class="descricao">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae saepe culpa dignissimos, nihil
+                    quae alias at sed aut eaque magni obcaecati consectetur? Rerum amet quisquam reprehenderit tempore
+                    deserunt tempora. Eaque?
+                </div>
+                <div class="nome">
+                    Plabo Marçal
+                </div>
+            </div>
+
+
     </section>
     <footer>
         <section>
@@ -83,7 +149,10 @@
                 </form>
             </div>
             <div class="Localizacao">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29311.787659889484!2d-51.38936706645935!3d-23.3167217931011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eca79579d8070b%3A0x86c186f3adc758ae!2sRol%C3%A2ndia%2C%20PR%2C%2086600-000!5e0!3m2!1spt-BR!2sbr!4v1744159268208!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29311.787659889484!2d-51.38936706645935!3d-23.3167217931011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eca79579d8070b%3A0x86c186f3adc758ae!2sRol%C3%A2ndia%2C%20PR%2C%2086600-000!5e0!3m2!1spt-BR!2sbr!4v1744159268208!5m2!1spt-BR!2sbr"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="Contato">
                 <p>(54)9999-9999</p>
